# abinbev-test

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  makefile  pyproject.toml  setup.ipynb
.github/workflows/: deploy.yml
docker/airflow/: .env.template  Dockerfile  docker-compose.yaml
docker/airflow/dags/: medallion_pipeline.py  teste.py
spark/: pyproject.toml  setup.ipynb
spark/abinbev_test/: __init__.py  runner.py
spark/abinbev_test/bronze/: engine.py  schema.py
spark/abinbev_test/gold/: engine.py
spark/abinbev_test/silver/: engine.py
spark/abinbev_test/utils/: client.py  config.py  logger.py  spark.py
spark/src/bronze/: engine.py  schema.py
spark/src/gold/: engine.py
spark/src/silver/: engine.py
spark/src/utils/: client.py  config.py  logger.py  spark.py
tests/: test_client.py  test_config.py  test_logger.py  test_schema.py
